--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
+dist
 build/Release
 
 # Dependency directories
