--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "quotes": "off",
     "require-jsdoc": "off",
     "no-trailing-spaces": "off",
-    "max-len": "off"
+    "max-len": "off",
+    "operator-linebreak": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
